--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,6 +9,7 @@ builds:
       - -trimpath
     goos:
       - "darwin"
+      - "freebsd"
       - "linux"
       - "windows"
     goarch:
@@ -30,3 +31,11 @@ changelog:
     exclude:
       - "^docs:"
       - "^test:"
+archives:
+  - format: tar.gz
+    name_template: |-
+      {{ .ProjectName }}-{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}
+    wrap_in_directory: true
+    format_overrides:
+      - goos: windows
+        format: zip
