--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,8 +14,9 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.17
-      - uses: actions/checkout@v3
-      - name: golangci-lint
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.49.0
